# curlendpoint

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
debian/: changelog  control
src/gst-plugins/: CMakeLists.txt  curlendpoint.c  gstcurlendpoint.c  gstcurlendpoint.cpp  gstcurlendpoint.h  gstrtppcmapay.c  gstrtppcmapay.h  gstrtppcmupay.c  gstrtppcmupay.h  gstrtppcmupay20.h
src/gst-plugins/recorderendpoint/: CMakeLists.txt  kmsavmuxer.c  kmsbasemediamuxer.c  kmsksrmuxer.c  kmsrecorderendpoint.c  kmsrecorderendpoint.h
src/server/: CMakeLists.txt
src/server/implementation/objects/: curlendpointImpl.cpp  curlendpointImpl.hpp
src/server/interface/: curlendpoint.curlendpoint.kmd.json  curlendpoint.kmd.json
tests/: CMakeLists.txt  recorderEndpoint.cpp
